had to fix overlay button background-position. they need to change for non mobile, its not perfect atm

--- a/client/src/components/Overlay/Overlay.css
+++ b/client/src/components/Overlay/Overlay.css
@@ -29,7 +29,7 @@
     -webkit-transform: rotate(30deg);
     transform: rotate(-90deg);
     background-position-y: 50%;
-    background-position-x: 258px;
+    background-position-x: 208px;
 }
 .swipeBack_b {
     width: 100%;
